# radixdlt-scrypto

./: .gitattributes  .gitignore  .gitmodules  .phylum_project  ADVANCED_OPTIMIZATION_FRAMEWORK_2014.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  assert_file_size.sh  benchmark_autocomplete.py  build.sh  cargo_check.py  cargo_check.sh  check.sh  check_stack_usage.sh  check_stubs.sh  clean.sh  doc.sh  file.tx  format-check.sh  format-stubs.py  format.sh  hash_bench.sh  install-simulator.sh  install.sh  item.txt  maya_router.wasm  optimization_framework.js  publish-docs.sh  run-code-coverage.sh  rust-toolchain.toml  script.sh  test-cargo-crates-release.sh  test.sh  test_extra.sh  test_utils.sh  (+14 more)
bls_for_supra/: Cargo.toml  README.md
bls_for_supra/crypto_scrypto/: Cargo.toml  crypto_scrypto.rpd  crypto_scrypto.wasm  readme.txt
bls_for_supra/src/: cli.rs  gateway.rs  main.rs  utils.rs
blueprint-schema-init/: Cargo.toml
execution-cost-unit-analysis/: Cargo.toml
execution-cost-unit-analysis/src/: configuration.rs  executor.rs  main.rs  scenarios.rs
fuzz-tests/: .gitignore  Cargo.toml  README.md  afl.sh  fuzz.sh  get-coverage-data.sh  get-coverage-report.sh  group_crashes.sh  install_afl.sh  list-fuzz-targets.sh  process_crash_inventory.sh  process_fuzz_results.sh  run-code-coverage.sh
fuzz-tests/src/: common.rs  fuzz.rs  fuzz_tx.rs  lib.rs  simple_fuzzer.rs  transaction.rs
monkey-tests/: Cargo.toml
monkey-tests/src/: access_controller.rs  consensus_manager.rs  costing_err.rs  lib.rs  multi_pool.rs  one_pool.rs  prelude.rs  resource.rs  two_pool.rs  validator.rs
monkey-tests/tests/: fuzz_access_controller.rs  fuzz_consensus.rs  fuzz_costing_error.rs  fuzz_fungible_resource.rs  fuzz_kernel.rs  fuzz_multi_pool.rs  fuzz_non_fungible_resource.rs  fuzz_one_pool.rs  fuzz_resource.rs  fuzz_system.rs  fuzz_two_pool.rs  fuzz_validator.rs
native-sdk/: Cargo.toml
native-sdk/src/: lib.rs  macros.rs
radix-blueprint-schema-init/: Cargo.toml  README.md
radix-blueprint-schema-init/src/: lib.rs
radix-clis/: Cargo.toml  README.md  go.sh
radix-clis-common/: Cargo.toml  README.md
radix-clis-common/src/: package.rs
radix-clis/src/: lib.rs
radix-clis/tests/: m1.rtm  manifest.sh  resim.sh  rtmc_rtmd.sh  scrypto.sh  scrypto_coverage.sh
radix-common/: Cargo.toml  README.md
radix-common-derive/: Cargo.toml  README.md
radix-common-derive/src/: decimal.rs  unwind.rs
radix-common-macros/: Cargo.toml
radix-common/benches/: schema.rs
radix-common/src/: lib.rs  macros.rs
radix-common/tests/: derive_manifest_sbor.rs  derive_scrypto_sbor.rs  manifest_codec.rs  scrypto_codec.rs
radix-engine/: Cargo.toml  README.md  build.rs
radix-engine-common/: Cargo.toml
radix-engine-common-macros/: Cargo.toml
radix-engine-common/benches/: schema.rs
radix-engine-common/src/: constants.rs  lib.rs  macros.rs  markers.rs  native_addresses.rs
radix-engine-common/tests/: data_model.rs  derive_manifest_sbor.rs  derive_scrypto_sbor.rs  manfiest_codec.rs  manifest_codec.rs  scrypto_codec.rs  well_known_types.rs
radix-engine-derive/: Cargo.toml
radix-engine-derive/src/: categorize.rs  decode.rs  describe.rs  encode.rs  legacy_describe.rs  lib.rs  manifest_categorize.rs  manifest_decode.rs  manifest_encode.rs  manifest_sbor.rs  non_fungible_data.rs  scrypto.rs  scrypto_categorize.rs  scrypto_decode.rs  scrypto_describe.rs  scrypto_event.rs  scrypto_sbor.rs  utils.rs
radix-engine-interface/: Cargo.toml  README.md
radix-engine-interface/benches/: decimal.rs  integer.rs  macros.rs  math.rs  precise_decimal.rs  schema.rs
radix-engine-interface/src/: constants.rs  hooks.rs  lib.rs  macros.rs  node_configs.rs  utils.rs
radix-engine-interface/tests/: data_model.rs  encode_decode_describe.rs  non_fungible_data.rs  scrypto_sbor.rs  well_known_types.rs
radix-engine-macros/: Cargo.toml
radix-engine-macros/src/: decimal.rs  lib.rs  unwind.rs
radix-engine-monkey-tests/: Cargo.toml
radix-engine-monkey-tests/src/: consensus_manager.rs  lib.rs  multi_pool.rs  one_pool.rs  resource.rs  two_pool.rs  validator.rs
radix-engine-monkey-tests/tests/: fuzz_consensus.rs  fuzz_fungible_resource.rs  fuzz_kernel.rs  fuzz_multi_pool.rs  fuzz_non_fungible_resource.rs  fuzz_one_pool.rs  fuzz_resource.rs  fuzz_two_pool.rs  fuzz_validator.rs
radix-engine-profiling/: Cargo.toml  README.md
radix-engine-profiling-derive/: Cargo.toml  README.md
radix-engine-profiling-derive/scripts/: run_tests.sh
radix-engine-profiling-derive/src/: lib.rs
radix-engine-profiling-macros/: Cargo.toml
radix-engine-profiling-macros/scripts/: convert.py  run_tests.sh
radix-engine-profiling/qemu-plugin/: meson.build
radix-engine-profiling/resources-tracker-macro/: Cargo.toml
radix-engine-profiling/src/: lib.rs
radix-engine-queries/: Cargo.toml
radix-engine-queries/src/: lib.rs  typed_native_events.rs  typed_substate_layout.rs
radix-engine-store-interface/: Cargo.toml
radix-engine-store-interface/src/: db_key_mapper.rs  interface.rs  lib.rs  utils.rs
radix-engine-stores/: Cargo.toml
radix-engine-stores/src/: hash_tree.rs  hash_tree_support.rs  inference.rs  interface.rs  jmt_support.rs  lib.rs  memory_db.rs  rocks_db.rs  utils.rs
radix-engine-tests/: Cargo.toml  README.md  build.rs
radix-engine-tests/assets/: access_controller_v1_package_definition.rpd  cost_flash_loan.csv  cost_mint_large_size_nfts_from_manifest.csv  cost_mint_mid_size_nfts_from_manifest.csv  cost_mint_small_size_nfts_from_manifest.csv  cost_publish_large_package.csv  cost_radiswap.csv  cost_transfer.csv  cost_transfer_to_virtual_account.csv  large_package.rpd
radix-engine-tests/benches/: costing.rs  database.rs  metadata_validation.rs  radiswap.rs  radix_engine.rs  resources_usage.rs  spin_loop.rs  transaction.rs  transaction_decompilation.rs  transaction_processing.rs  transaction_validation.rs  transfer.rs  validation.rs  wasm.rs  (+1 more)
radix-engine-toolkit-common/: Cargo.toml  README.md
radix-engine-utils/: Cargo.toml
radix-native-sdk/: Cargo.toml  README.md
(+47595 files in other folders)
