[workspace]

[package]
name = "bls_for_supra"
version = "0.1.0"
edition = "2021"

[dependencies]
# Radix Engine deps
# Normally one would set the deps as follows
#scrypto = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "206d65b05a98e4d2f8476dc73bb3fae9348c2fc7", features = ["serde"] }
#transaction = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "206d65b05a98e4d2f8476dc73bb3fae9348c2fc7" }
#sbor = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "206d65b05a98e4d2f8476dc73bb3fae9348c2fc7" }

# But since this package is within the same repo we can do this
scrypto = { path = "../scrypto" }
transaction = { path = "../transaction" }
sbor = { path = "../sbor" }

# CLI
clap = { version = "4.4.11", features = ["derive"] }
# To communicate with gateway via HTTP REST API
reqwest = { version = "0.11.22", features = ["blocking", "json"] }

serde = { version = "1.0.193", features = ["derive"] }
serde_json = { version = "1.0.108" }
hex = { version = "0.4.3" }
