[package]
name = "monkey-tests"
version = "1.2.0-dev"
edition = "2021"

[dependencies]
native-sdk = { path = "../native-sdk", default-features = false }
sbor = { path = "../sbor", default-features = false }
radix-engine = { path = "../radix-engine", default-features = false, features = ["radix_engine_tests"] }
radix-engine-system-interface = { path = "../radix-engine-system-interface", default-features = false }
radix-engine-common = { path = "../radix-engine-common", default-features = false }
substate-stores-interface = { path = "../substate-stores-interface", default-features = false }
substate-stores = { path = "../substate-stores", default-features = false }
substate-stores-queries = { path = "../substate-stores-queries", default-features = false }
transaction = { path = "../transaction", default-features = false }
transaction-scenarios = { path = "../transaction-scenarios", default-features = false }
utils = { path = "../utils", default-features = false }
radix-engine-profiling = { path = "../radix-engine-profiling", optional = true, features = ["resource_tracker"]}
resources-tracker-macro = { path = "../radix-engine-profiling/resources-tracker-macro" }
wabt = { version = "0.10.0" }
scrypto = { path = "../scrypto", default-features = false }
sbor-derive = { path = "../sbor-derive", default-features = false }
scrypto-test = { path = "../scrypto-test", default-features = false }
rand = { version = "0.8.5" }
rand_chacha = { version = "0.3.1" }
rayon = "1.5.3"
serde = { version = "1.0.144", default-features = false }
serde_json = { version = "1.0.81", default-features = false }
crossbeam = { version = "0.8.2" }
walkdir = { version = "2.3.3" }
paste = { version = "1.0.13" }

[features]
# You should enable either `std` or `alloc`
default = ["std"]
std = ["sbor/std", "transaction/std", "transaction-scenarios/std", "radix-engine/std", "radix-engine/moka", "radix-engine-system-interface/std", "substate-stores/std", "substate-stores-interface/std", "substate-stores-queries/std", "utils/std", "scrypto/std", "scrypto-test/std"]
alloc = ["sbor/alloc", "transaction/alloc", "transaction-scenarios/alloc", "radix-engine/alloc", "radix-engine/lru", "radix-engine-system-interface/alloc", "substate-stores/alloc", "substate-stores-interface/alloc", "substate-stores-queries/alloc", "utils/alloc", "scrypto/alloc", "scrypto-test/alloc"]
rocksdb = ["scrypto-test/rocksdb"]
post_run_db_check = ["scrypto-test/post_run_db_check"]
resource_tracker = ["dep:radix-engine-profiling", "resources-tracker-macro/resource_tracker", "radix-engine/resource_tracker", "radix-engine-common/resource_tracker", "scrypto-test/resource_tracker"]

[lib]
doctest = false
bench = false
