[package]
name = "monkey-tests"
version = "1.2.0-dev"
edition = "2021"

[dependencies]
native-sdk = { workspace = true }
sbor = { workspace = true }
radix-engine = { workspace = true, features = ["radix_engine_tests"] }
radix-engine-interface = { workspace = true }
radix-engine-common = { workspace = true }
substate-store-interface = { workspace = true }
substate-store-impls = { workspace = true }
substate-store-queries = { workspace = true }
transaction = { workspace = true }
transaction-scenarios = { workspace = true }
utils = { workspace = true }
radix-engine-profiling = { workspace = true, optional = true, features = ["resource_tracker"]}
radix-engine-profiling-macros = { workspace = true }
scrypto-test = { workspace = true }

wabt = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
crossbeam = { workspace = true }
walkdir = { workspace = true }
paste = { workspace = true }

[features]
# You should enable either `std` or `alloc`
default = ["std"]
std = ["sbor/std", "transaction/std", "transaction-scenarios/std", "radix-engine/std", "radix-engine/moka", "radix-engine-interface/std", "substate-store-impls/std", "substate-store-interface/std", "substate-store-queries/std", "utils/std", "scrypto-test/std"]
alloc = ["sbor/alloc", "transaction/alloc", "transaction-scenarios/alloc", "radix-engine/alloc", "radix-engine/lru", "radix-engine-interface/alloc", "substate-store-impls/alloc", "substate-store-interface/alloc", "substate-store-queries/alloc", "utils/alloc", "scrypto-test/alloc"]
rocksdb = ["scrypto-test/rocksdb"]
post_run_db_check = ["scrypto-test/post_run_db_check"]
resource_tracker = ["dep:radix-engine-profiling", "radix-engine-profiling-macros/resource_tracker", "radix-engine/resource_tracker", "radix-engine-common/resource_tracker", "scrypto-test/resource_tracker"]

[lib]
doctest = false
bench = false
