[package]
name = "native-sdk"
version = "0.7.0"
edition = "2021"

[dependencies]
sbor = { path = "../sbor", default-features = false }
radix-engine-interface = { path = "../radix-engine-interface", default-features = false }
radix-engine-derive = { path = "../radix-engine-derive", default-features = false }
utils = { path = "../utils", default-features = false }

sha2 = { version = "0.10.2", default-features = false }
sha3 = { version = "0.10.1", default-features = false }
hex = { version = "0.4.3", default-features = false }
num-traits = { version = "0.2.15", default-features = false }
num-bigint = { version = "0.4.3", default-features = false }
bech32 = { version = "0.9.0", default-features = false }

[features]
# You should enable either `std` or `alloc`
default = ["std"]
std = ["hex/std", "sbor/std", "utils/std", "radix-engine-interface/std", "radix-engine-derive/std", "utils/std"]
alloc = ["hex/alloc", "sbor/alloc", "utils/alloc", "radix-engine-interface/alloc", "radix-engine-derive/alloc", "utils/alloc"]
