[package]
name = "native-sdk"
version = "0.10.0"
edition = "2021"

[dependencies]
sbor = { path = "../sbor", default-features = false }
radix-engine-interface = { path = "../radix-engine-interface", default-features = false }
radix-engine-derive = { path = "../radix-engine-derive", default-features = false }
utils = { path = "../utils", default-features = false }

[features]
# You should enable either `std` or `alloc`
default = ["std"]
std = ["sbor/std", "radix-engine-interface/std", "radix-engine-derive/std", "utils/std"]
alloc = ["sbor/alloc", "radix-engine-interface/alloc", "radix-engine-derive/alloc", "utils/alloc"]

# Ref: https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
[lib]
bench = false
