[package]
name = "native-sdk"
version = "1.2.0-dev"
edition = "2021"

[dependencies]
utils = { path = "../utils", default-features = false }
sbor = { path = "../sbor", default-features = false }
radix-engine-common = { path = "../radix-engine-common", default-features = false }
native-blueprints-interface = { path = "../native-blueprints-interface", default-features = false }
module-blueprints-interface = { path = "../module-blueprints-interface", default-features = false }
radix-engine-system-interface = { path = "../radix-engine-system-interface", default-features = false }

[features]
# You should enable either `std` or `alloc`
default = ["std"]
std = ["sbor/std", "native-blueprints-interface/std", "module-blueprints-interface/std", "radix-engine-system-interface/std", "utils/std", "radix-engine-common/std"]
alloc = ["sbor/alloc", "native-blueprints-interface/alloc", "module-blueprints-interface/alloc", "radix-engine-system-interface/alloc", "utils/alloc", "radix-engine-common/alloc"]

# Ref: https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
[lib]
doctest = false
bench = false
