[package]
name = "radix-blueprint-schema-init"
version = "1.3.0"
edition = "2021"
description = "The model of blueprint schema initialization, from the Radix DLT project."
readme = "README.md"
license-file = "../LICENSE"
repository = "https://github.com/radixdlt/radixdlt-scrypto"

[dependencies]
sbor = { workspace = true }
radix-common = { workspace = true }
serde = { workspace = true, optional = true }
bitflags = { workspace = true }

[features]
# You should enable either `std` or `alloc`
default = ["std"]
std = ["sbor/std", "radix-common/std", "serde?/std"]
alloc = ["sbor/alloc", "radix-common/alloc", "serde?/alloc"]

# Enable serde derives
serde = ["serde/derive", "sbor/serde", "radix-common/serde"]

[lib]
bench = false
