[package]
name = "radix-clis-common"
version = "1.2.0-dev"
edition = "2021"
description = "Shared logic of the Radix CLIs."
readme = "README.md"
license-file = "../LICENSE"
repository = "https://github.com/radixdlt/radixdlt-scrypto"

[dependencies]
regex = { workspace = true }
include_dir = { workspace = true }

# Ref: https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
[lib]
doctest = false
bench = false